
 Kana no quiz - Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

* Version 1.4 (2005-XX-XX):

- You can now choose several portions of the same kana set to
train upon in the same time.
- Random list answer mode now permits up to five choices. :p
- Support for the 2 other popular romanization systems: the
Kunrei-shiki's and the Nihon-shiki's. (Because they remain
really less used worldwide than the Hepburn's, choosing one
of these systems is for people who know what they are doing.)
[IMPLEMENTATION IN PROGRESS]
- Some improvements on the GTK+ interface, and replacement of
the depracted widgets.
- Addition of a marvellous icon (GTK+)!


* Version 1.2d (2005-03-17):

- Addition of a Serbian translation.
- Some (English) spelling corrections.


* Version 1.2c (2005-02-14):

- A bug created in the last version has been fixed...
Now the ``kana engine" should be clean ! :-D


* Version 1.2b (2005-02-07):

- Bugfix : prevention, while doing the quiz using the random
list mode, of getting the right answer appearing twice in
the list.
- The interface type used by Kana no quiz is now indicated
in the ``About" window (in case that you don't see! ^^).


* Version 1.2 (2005-01-23):

- The Sweedish translation has been finaly updated.
- In the GTK version, we can choose the length of the quiz
from 1 to 200 questions.
- Addition of a new option to not repeat the same kana
during the quiz (as much as possible: a kana might appear
several time if the quiz lenght is bigger than the number of
selected kana).


* Version 1.1 (2004-09-25):

- Doing the quiz, the same kana now won't appear twice in
a row any more. :p
- A new ``Introduction" window which briefly introduce the
Kana writing system and what this program is aimed to.
- You can now choose to get trained only upon a portion of
kana rather than the full kana set, it may be helpful for
the beginers! ^_^;


* Version 1.0 (2004-07-29):

- Addition of the ``additional" katakana question set which
contains syllabes used for foreign words.